Use Google Fonts.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="author" content="TalentSoup Chefs">
   <!-- CSS : implied media="all" -->
   <link rel="stylesheet" href="stylesheets/screen.css">
+  <link href='http://fonts.googleapis.com/css?family=Noto+Sans|Merriweather+Sans:300|Raleway:200' rel='stylesheet' type='text/css'>
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="javascripts/libs/modernizr-1.6.min.js"></script>
 </head>
@@ -22,20 +23,23 @@
 	      We’re searching for an engaged couple who wants to<br/>
 	      share their excitement with us and join the cast of our<br/>
 	      marketing campaign to:</p><br>
-    	  <p style="font-size: 17px;" class="caps">
+    	  <p style="font-size: 15px;font-family: 'Raleway', serif; line-height:24px;" class="caps">
 	      be featured on in-mall signage<br />
         star on social media<br />
         be the guests of honor for an exciting<br />
         engagement party</p>
-        <p style="font-size: 21px;" class="caps">Calling All Couples.</p>
+
+        <div style="padding: 25px 0px; font-family: 'Noto'"><p style="font-size: 24px;" class="caps">Calling All Couples.</p></div>
+
     	  <p class="natick-text">This is not a model search - it’s a Couple Search.<br />
         Any engaged couple who enjoys shopping and dining<br/>
         at Natick Mall is eligible and encouraged to enter.<br/>
         Be sure the photo(s) you submit show the two of you together.</p>
+        <br/>
     	  <p class="natick-text">One couple will be selected to receive an engagement<br/>
 	      party prize package featuring gifts from Natick Mall<br/>
 	      shops and restaurants.</p><br/>
-    	  <a class="natick-button" href="https://talentsoup.com/natick" >Click Here to Enter the Natick Mall<br />Couple Search<br><span style="margin-top:4px; font-size:10px;">I agree to the terms of use for talent.</span></a><br><br><br>
+    	  <a class="natick-button" href="https://talentsoup.com/natick" >Click Here to Enter the Natick Mall<br />Couple Search<br><span style="margin-top:4px; font-size:10px;">I agree to the terms of use for talent.</span></a><br/><br/>
     	  <p><a href="/faq" class="italic-underline" style="color:#fff;">Click here for Complete Details and FAQ's.</a></p><br>
     	  <img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup">
     	</div><!-- /co12 -->
