--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	      party prize package featuring gifts from Natick Mall<br/>
 	      shops and restaurants.</p><br/>
     	  <a class="natick-button" href="https://talentsoup.com/natick" >Click Here to Enter the Natick Mall<br />Couple Search<br><span style="margin-top:4px; font-size:10px;">I agree to the terms of use for talent.</span></a><br/><br/>
-    	  <p><a href="/faq" class="italic-underline" style="color:#fff;">Click here for Complete Details and FAQ's.</a></p><br>
+    	  <p><a href="faq.html" class="italic-underline" style="color:#fff;">Click here for Complete Details and FAQ's.</a></p><br>
     	  <img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup">
     	</div><!-- /co12 -->
     </div><!-- /wrap -->
