FAQ link to homepage.

--- a/faq.html
+++ b/faq.html
@@ -42,7 +42,7 @@
 				The winning couple will be the guests of honor at an Engagement Party held at Natick Mall (“Event”) on June 23, 2013 and at the Event they will receive multiple prizes from various Natick Mall tenants and other local merchants.  The winning couple will also be featured in Natick Mall media campaigns after they participate in a professional photo shoot. See our Contest Rules for complete prize details and terms.</p>  
         <br/>
         <p class="natick-text">Where can I obtain the Contest Rules regarding the Natick Mall Couple Search?<br/>
-        Contest Rules are available at Natick Mall Guest Services and online at www.NatickShopperSearch.com.</p>
+        Contest Rules are available at Natick Mall Guest Services and online at <a href="http://www.natickshoppersearch.com">http://natickshoppersearch.com</a></p>
 	      <br/>   
     	  <img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup">
     	</div><!-- /co12 -->
