fixed image maps

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body id="natick">
+<a id="natick-fb-link1" href="http://www.facebook.com/NatickCollection" target="_blank"></a>
+<a id="natick-tw-link1" href="http://twitter.com/ShopNatick" target="_blank"></a>
+<a id="natick-ggp-link1" href="http://www.ggp.com" target="_blank"></a>
   <div id="wrap">
 	  <div id="main-natick">
     	<div id="col1">
