Added Google Font styling to signup page

--- a/natick-signup.html
+++ b/natick-signup.html
@@ -23,7 +23,7 @@
 
   <!-- CSS : implied media="all" -->
   <link rel="stylesheet" href="css/screen.css?v=1">
-
+  <link href='http://fonts.googleapis.com/css?family=Arbutus+Slab|Lato' rel='stylesheet' type='text/css'>
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
 
@@ -61,9 +61,9 @@
     	</div><!-- /col1 -->
 
     	<div class="align-center" id="col2b">
-    	<p class="natick-text">Welcome to the Natick Mall Couple Search.<br />With this simple, secure site operated by our casting<br />partner TalentSoup, you can enjoy a worry-free<br />submission process with: No cost &#8226; No obligation &#8226; No spam</p><br>
-    	<p style="font-family: Georgia, Serif; font-size: 17px;">Ready to Submit Your Shopper Search Entry?</p><br>
-    	<p class="natick-text">&#8226; Fill out this form (all fields are required)<br>&#8226; Upload at least 2 images and click <span style="font-weight: bold;">Submit</span></p><br><br>
+    	<p class="natick-text" style="font-family: 'Lato', sans-serif;">Welcome to the Natick Mall Couple Search.<br />With this simple, secure site operated by our casting<br />partner TalentSoup, you can enjoy a worry-free<br />submission process with: No cost &#8226; No obligation &#8226; No spam</p><br>
+    	<p style="font-family: 'Arbutus Slab', serif; font-size: 17px;">Ready to Submit Your Shopper Search Entry?</p><br>
+    	<p class="natick-text" style="font-family: 'Lato', sans-serif;">&#8226; Fill out this form (all fields are required)<br>&#8226; Upload at least 2 images and click <span style="font-weight: bold;">Submit</span></p><br><br>
 
     	<!-- form -->
     <div style="text-align: left;">
