Landing page updates

--- a/index.html
+++ b/index.html
@@ -12,16 +12,24 @@
 </head>
 
 <body id="natick">
-<!--<a id="natick-fb-link1" href="http://www.facebook.com/NatickCollection" target="_blank"></a>
-<a id="natick-tw-link1" href="http://twitter.com/ShopNatick" target="_blank"></a>
-<a id="natick-ggp-link1" href="http://www.ggp.com" target="_blank"></a>-->
   <div id="wrap">
-	  <div id="main-natick">
-    	<div id="col1">
+    	<div id="col1-landing">
+        <img src="http://i.imgur.com/GJ1HtMD.png" alt="Natick Mall Couple Search 2013" id="natick-couple" />
+        
+        <div align="center">
+          <img src="http://i.imgur.com/Y748WQh.png" alt="Natick Mall" id="natick-logo" />
+        </div>
+        
+        <div align="center" id="media-group">
+          <a href="http://www.facebook.com/NatickCollection" target="_blank"><img src="http://i.imgur.com/tzFpv8N.png" alt="Natick Mall - Facebook" id="natick-fb" /></a>
+          <a href="http://twitter.com/ShopNatick" target="_blank"><img src="http://i.imgur.com/hjVgLv0.png" alt="Natick Mall - Twitter" id="natick-tw" /></a>
+          <a href="http://www.ggp.com" target="_blank"><img src="http://i.imgur.com/d37WBE5.png" alt="GGP" id="natick-ggp" /></a>
+        </div>
+        <div style="height: 100px;"></div>
     	</div><!-- /col1 -->
 
-    	<div class="align-center" id="col2b">
-    	  <p class="natick-text" style="font-family: 'Lato', sans-serif;">
+    	<div class="align-center" id="col2-landing">
+    	  <p class="natick-text" style="font-family: 'Lato', sans-serif; margin-top:40px;">
 	      Welcome to the Natick Mall Couple Search.<br/>
 	      We’re searching for an engaged couple who wants to<br/>
 	      share their excitement with us and join the cast of our<br/>
@@ -32,7 +40,9 @@
         be the guests of honor for an exciting<br />
         engagement party</p>
 
-        <div style="padding: 25px 0px; font-family: 'Arbutus Slab', serif;"><p style="font-size: 24px;" class="caps">Calling All Couples.</p></div>
+        <div style="padding: 25px 0px; font-family: 'Arbutus Slab', serif;">
+          <p style="font-size: 24px;" class="caps">Calling All Couples.</p>
+        </div>
 
     	  <p class="natick-text" style="font-family: 'Lato', sans-serif;">This is not a model search - it’s a Couple Search.<br />
         Any engaged couple who enjoys shopping and dining<br/>
@@ -44,9 +54,9 @@
 	      shops and restaurants.</p><br/>
     	  <a class="natick-button" href="https://talentsoup.com/natick" >Click Here to Enter the Natick Mall<br />Couple Search<br><span style="margin-top:4px; font-size:10px;">I agree to the terms of use for talent.</span></a><br/><br/>
     	  <p><a href="faq.html" class="italic-underline" style="color:#fff;">Click here for Complete Details and FAQ's.</a></p><br>
-    	  <img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup">
+    	  <a href="http://talentsoup.com/" alt="TalentSoup"><img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup"></a>
+        <div style="height: 58px;"></div>
     	</div><!-- /co12 -->
-    </div><!-- /wrap -->
-  </div>
+  </div><!-- /wrap -->
 </body>
 </html>
