New bg splice, copy updates.

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <body id="natick">
   <div id="wrap">
     	<div id="col1-landing">
-        <img src="http://i.imgur.com/GJ1HtMD.png" alt="Natick Mall Couple Search 2013" id="natick-couple" />
+        <img src="http://natick.s3.amazonaws.com/GJ1HtMD.png" alt="Natick Mall Couple Search 2013" id="natick-couple" />
         
         <div align="center">
-          <img src="http://i.imgur.com/Y748WQh.png" alt="Natick Mall" id="natick-logo" />
+          <img src="http://natick.s3.amazonaws.com/Y748WQh.png" alt="Natick Mall" id="natick-logo" />
         </div>
         
         <div align="center" id="media-group">
-          <a href="http://www.facebook.com/NatickCollection" target="_blank"><img src="http://i.imgur.com/tzFpv8N.png" alt="Natick Mall - Facebook" id="natick-fb" /></a>
-          <a href="http://twitter.com/ShopNatick" target="_blank"><img src="http://i.imgur.com/hjVgLv0.png" alt="Natick Mall - Twitter" id="natick-tw" /></a>
-          <a href="http://www.ggp.com" target="_blank"><img src="http://i.imgur.com/d37WBE5.png" alt="GGP" id="natick-ggp" /></a>
+          <a href="http://www.facebook.com/NatickCollection" target="_blank"><img src="http://natick.s3.amazonaws.com/tzFpv8N.png" alt="Natick Mall - Facebook" id="natick-fb" /></a>
+          <a href="http://twitter.com/ShopNatick" target="_blank"><img src="http://natick.s3.amazonaws.com/hjVgLv0.png" alt="Natick Mall - Twitter" id="natick-tw" /></a>
+          <a href="http://www.ggp.com" target="_blank"><img src="http://natick.s3.amazonaws.com/d37WBE5.png" alt="GGP" id="natick-ggp" /></a>
         </div>
         <div style="height: 100px;"></div>
     	</div><!-- /col1 -->
