Updated Powered by TS
Will send new PNG through email.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	      shops and restaurants.</p><br/>
     	  <a class="natick-button" href="https://talentsoup.com/natick" >Click Here to Enter the Natick Mall<br />Couple Search<br><span style="margin-top:4px; font-size:10px;">I agree to the terms of use for talent.</span></a><br/><br/>
     	  <p><a href="faq.html" class="italic-underline" style="color:#fff;">Click here for Complete Details and FAQ's.</a></p><br>
-    	  <a href="http://talentsoup.com/" alt="TalentSoup"><img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup"></a>
+    	  <a href="http://talentsoup.com/" alt="TalentSoup"><img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup" id="powered-by"></a>
         <div style="height: 58px;"></div>
     	</div><!-- /co12 -->
   </div><!-- /wrap -->
