--- a/faq.html
+++ b/faq.html
@@ -9,43 +9,42 @@
   <link href='http://fonts.googleapis.com/css?family=Noto+Sans|Merriweather+Sans:300|Raleway:200' rel='stylesheet' type='text/css'>
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="javascripts/libs/modernizr-1.6.min.js"></script>
-  <style>#natick{background-attachment: fixed;}</style>
 </head>
 
 <body id="natick">
   <div id="wrap">
-	  <div id="main-natick">
-    	<div id="col1">
-    	</div><!-- /col1 -->
+    <div id="main-natick">
+      <div id="col1">
+      </div><!-- /col1 -->
 
-    	<div id="col2b" class="natick-text">
-	     <div style="padding: 25px 0px; font-family: 'Noto'"><p style="font-size: 24px;" class="caps">NATICK MALL COUPLE SEARCH FAQ's</p></div>
-			  <p class="natick-text">What is the Natick Mall Couple Search?<br/>
-				We are looking for an engaged couple who loves Natick Mall to star in our marketing campaign. The engaged couple who wins will appear in our Natick Mall marketing campaign and will receive an Engagement Party prize package. Please note, this is not a model search and there are no modeling contracts to be won.</p>
+      <div class="align-center" id="col2b">
+        <div style="padding: 25px 0px; font-family: 'Noto'"><p style="font-size: 24px;" class="caps">NATICK MALL COUPLE SEARCH FAQ's</p></div>
+		<p class="natick-text">What is the Natick Mall Couple Search?<br/>
+		We are looking for an engaged couple who loves Natick Mall to star in our marketing campaign. The engaged couple who wins will appear in our Natick Mall marketing campaign and will receive an Engagement Party prize package. Please note, this is not a model search and there are no modeling contracts to be won.</p>
         <br/>
         <p class="natick-text">When are submissions accepted?<br>
         We begin accepting entries at 8:00am ET Monday, April 26, 2013 and conclude at 12:00pm ET on Saturday, May 18, 2013.</p>
         <br/>
-				<p class="natick-text">How does the Natick Mall Couple Search work?<br/>
-				Engaged couples in the Natick area are invited to submit photos on-line for an opportunity to be featured in our Favorite Couple Promotion.<br/>
-				All submissions will be reviewed, and selected Semi-finalists will be notified by Monday, May 20th to take part in a Call Back interview at Natick Mall on Saturday, May 25th. After the Call Back, two Finalists will be chosen to participate in public voting via social media to determine the final winner.  We expect to be able to announce the winning couple by June 1st.</p>
+		<p class="natick-text">How does the Natick Mall Couple Search work?<br/>
+		Engaged couples in the Natick area are invited to submit photos on-line for an opportunity to be featured in our Favorite Couple Promotion.<br/>
+		All submissions will be reviewed, and selected Semi-finalists will be notified by Monday, May 20th to take part in a Call Back interview at Natick Mall on Saturday, May 25th. After the Call Back, two Finalists will be chosen to participate in public voting via social media to determine the final winner.  We expect to be able to announce the winning couple by June 1st.</p>
         <br/>
-				<p class="natick-text">How do I enter?<br/>
-				Please go to www.NatickShopperSearch.com and follow the instructions to enter. You will be directed to submit your photo(s) and tell us about yourself and your fiancé.</p>
+		<p class="natick-text">How do I enter?<br/>
+		Please go to www.NatickShopperSearch.com and follow the instructions to enter. You will be directed to submit your photo(s) and tell us about yourself and your fiancé.</p>
         <br/>
-				<p class="natick-text">A few more details:<br/>
-				Couples must be engaged and residents of Massachusetts, age 18 or older. Employees of General Growth Properties, Inc., and its subsidiaries, are not eligible to participate.<br/>
-				Your photograph must be taken within the last year and should show the two of you together. If your photo includes a child (age 17 or younger), you must be the parent or legal guardian of that child or have the permission of the child's parent or legal guardian.<br/>
-				Couples must agree to adhere to the Contest Rules and the two finalist couples, whose photo will be on Facebook for the public voting phase of the Contest, must sign an Image Release/Agreement to Participate.</p>
+		<p class="natick-text">A few more details:<br/>
+		Couples must be engaged and residents of Massachusetts, age 18 or older. Employees of General Growth Properties, Inc., and its subsidiaries, are not eligible to participate.<br/>
+		Your photograph must be taken within the last year and should show the two of you together. If your photo includes a child (age 17 or younger), you must be the parent or legal guardian of that child or have the permission of the child's parent or legal guardian.<br/>
+		Couples must agree to adhere to the Contest Rules and the two finalist couples, whose photo will be on Facebook for the public voting phase of the Contest, must sign an Image Release/Agreement to Participate.</p>
         <br/>
-				<p class="natick-text">What will the new Faces of Natick Mall receive?<br/>
-				The winning couple will be the guests of honor at an Engagement Party held at Natick Mall (“Event”) on June 23, 2013 and at the Event they will receive multiple prizes from various Natick Mall tenants and other local merchants.  The winning couple will also be featured in Natick Mall media campaigns after they participate in a professional photo shoot. See our Contest Rules for complete prize details and terms.</p>  
+		<p class="natick-text">What will the new Faces of Natick Mall receive?<br/>
+		The winning couple will be the guests of honor at an Engagement Party held at Natick Mall (“Event”) on June 23, 2013 and at the Event they will receive multiple prizes from various Natick Mall tenants and other local merchants.  The winning couple will also be featured in Natick Mall media campaigns after they participate in a professional photo shoot. See our Contest Rules for complete prize details and terms.</p>  
         <br/>
         <p class="natick-text">Where can I obtain the Contest Rules regarding the Natick Mall Couple Search?<br/>
         Contest Rules are available at Natick Mall Guest Services and online at <a href="http://www.natickshoppersearch.com">http://natickshoppersearch.com</a></p>
-	      <br/>   
-    	  <img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup">
-    	</div><!-- /co12 -->
+	    <br/>   
+        <img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup">
+      </div><!-- /co12 -->
     </div><!-- /wrap -->
   </div>
 </body>
