--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="author" content="TalentSoup Chefs">
   <!-- CSS : implied media="all" -->
   <link rel="stylesheet" href="stylesheets/screen.css">
+  <style>#natick{background-attachment: fixed;}</style>
   <link href='http://fonts.googleapis.com/css?family=Noto+Sans|Merriweather+Sans:300|Raleway:200' rel='stylesheet' type='text/css'>
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="javascripts/libs/modernizr-1.6.min.js"></script>
