--- a/faq.html
+++ b/faq.html
@@ -9,17 +9,27 @@
   <link href='http://fonts.googleapis.com/css?family=Arbutus+Slab|Lato' rel='stylesheet' type='text/css'>
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="javascripts/libs/modernizr-1.6.min.js"></script>
-  <style>#natick{background-attachment: fixed;}</style>
 </head>
 
 <body id="natick">
   <div id="wrap">
-	  <div id="main-natick">
-    	<div id="col1">
-    	</div><!-- /col1 -->
+    <div id="col1-landing">
+      <img src="http://natick.s3.amazonaws.com/GJ1HtMD.png" alt="Natick Mall Couple Search 2013" id="natick-couple" />
+        
+      <div align="center">
+        <img src="http://natick.s3.amazonaws.com/Y748WQh.png" alt="Natick Mall" id="natick-logo" />
+      </div>
+        
+      <div align="center" id="media-group">
+        <a href="http://www.facebook.com/NatickCollection" target="_blank"><img src="http://natick.s3.amazonaws.com/tzFpv8N.png" alt="Natick Mall - Facebook" id="natick-fb" /></a>
+        <a href="http://twitter.com/ShopNatick" target="_blank"><img src="http://natick.s3.amazonaws.com/hjVgLv0.png" alt="Natick Mall - Twitter" id="natick-tw" /></a>
+        <a href="http://www.ggp.com" target="_blank"><img src="http://natick.s3.amazonaws.com/d37WBE5.png" alt="GGP" id="natick-ggp" /></a>
+      </div>
+      <div style="height: 100px;"></div>
+   </div><!-- /col1 -->
 
-    	<div id="col2b" class="natick-text">
-	     <div style="padding: 25px 0px; font-family: 'Noto'"><p style="font-size: 24px;" class="caps">NATICK MALL COUPLE SEARCH FAQ's</p></div>
+   <div class="align-center" id="col2-landing">
+     	  <div style="padding: 25px 0px; font-family: 'Noto'"><p style="font-size: 24px;" class="caps">NATICK MALL COUPLE SEARCH FAQ's</p></div>
 			  <p class="natick-text">What is the Natick Mall Couple Search?<br/>
 				We are looking for an engaged couple who loves Natick Mall to star in our marketing campaign. The engaged couple who wins will appear in our Natick Mall marketing campaign and will receive an Engagement Party prize package. Please note, this is not a model search and there are no modeling contracts to be won.</p>
         <br/>
@@ -44,9 +54,11 @@
         <p class="natick-text">Where can I obtain the Contest Rules regarding the Natick Mall Couple Search?<br/>
         Contest Rules are available at Natick Mall Guest Services and online at <a href="http://www.natickshoppersearch.com">http://natickshoppersearch.com</a></p>
 	      <br/>   
-    	  <img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup">
-    	</div><!-- /co12 -->
-    </div><!-- /wrap -->
-  </div>
+     <a href="http://talentsoup.com/" alt="TalentSoup"><img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup" id="powered-by"></a>
+     <div style="height: 58px;"></div>
+    </div><!-- /co12 -->
+  </div><!-- /wrap -->
 </body>
 </html>
+
+
