--- a/faq.html
+++ b/faq.html
@@ -28,7 +28,7 @@
       <div style="height: 100px;"></div>
    </div><!-- /col1 -->
 
-   <div class="align-center" id="col2-landing" style="align: justify; padding-left:50px;">
+   <div class="align-center" id="col2-landing" style="align: justify;">
      	  <div style="padding: 25px 0px; font-family: 'Noto'"><p style="font-size: 24px;" class="caps">NATICK MALL COUPLE SEARCH FAQ's</p></div>
 			  <p class="natick-text">What is the Natick Mall Couple Search?<br/>
 				We are looking for an engaged couple who loves Natick Mall to star in our marketing campaign. The engaged couple who wins will appear in our Natick Mall marketing campaign and will receive an Engagement Party prize package. Please note, this is not a model search and there are no modeling contracts to be won.</p>
