Fixed FAQ, background whitespace removed.

--- a/faq.html
+++ b/faq.html
@@ -28,7 +28,8 @@
       <div style="height: 100px;"></div>
    </div><!-- /col1 -->
 
-   <div class="align-center" id="col2-landing" align="left">
+   <div id="col2-landing" align="left">
+     <div style="padding: 0px 25px;">
      	  <div style="padding: 25px 0px; font-family: 'Noto'"><p style="font-size: 24px;" class="caps">NATICK MALL COUPLE SEARCH FAQ's</p></div>
 			  <p class="natick-text">What is the Natick Mall Couple Search?<br/>
 				We are looking for an engaged couple who loves Natick Mall to star in our marketing campaign. The engaged couple who wins will appear in our Natick Mall marketing campaign and will receive an Engagement Party prize package. Please note, this is not a model search and there are no modeling contracts to be won.</p>
@@ -55,7 +56,7 @@
         Contest Rules are available at Natick Mall Guest Services and online at <a href="http://www.natickshoppersearch.com">http://natickshoppersearch.com</a></p>
 	      <br/>   
      <a href="http://talentsoup.com/" alt="TalentSoup"><img src="http://natick.s3.amazonaws.com/powered-by-ts.png" alt="Powered by TalentSoup" id="powered-by"></a>
-     <div style="height: 58px;"></div>
+     </div>
     </div><!-- /co12 -->
   </div><!-- /wrap -->
 </body>
