Updated FB link on pages

--- a/natick-signup.html
+++ b/natick-signup.html
@@ -21,7 +21,7 @@
         </div>
         
         <div align="center" id="media-group">
-          <a href="http://www.facebook.com/NatickCollection" target="_blank"><img src="http://natick.s3.amazonaws.com/rghS5sS.png" alt="Natick Mall - Facebook" id="natick-fb" /></a>
+          <a href="http://www.facebook.com/NatickMall" target="_blank"><img src="http://natick.s3.amazonaws.com/rghS5sS.png" alt="Natick Mall - Facebook" id="natick-fb" /></a>
           <a href="http://twitter.com/ShopNatick" target="_blank"><img src="http://natick.s3.amazonaws.com/OstCziV.png" alt="Natick Mall - Twitter" id="natick-tw" /></a>
           <a href="http://www.ggp.com" target="_blank"><img src="http://natick.s3.amazonaws.com/U9odK2k.png" alt="GGP" id="natick-ggp" /></a>
         </div>
