--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         
         <div align="center" id="media-group">
-          <a href="http://www.facebook.com/NatickCollection" target="_blank"><img src="http://natick.s3.amazonaws.com/tzFpv8N.png" alt="Natick Mall - Facebook" id="natick-fb" /></a>
+          <a href="http://www.facebook.com/NatickMall" target="_blank"><img src="http://natick.s3.amazonaws.com/tzFpv8N.png" alt="Natick Mall - Facebook" id="natick-fb" /></a>
           <a href="http://twitter.com/ShopNatick" target="_blank"><img src="http://natick.s3.amazonaws.com/hjVgLv0.png" alt="Natick Mall - Twitter" id="natick-tw" /></a>
           <a href="http://www.ggp.com" target="_blank"><img src="http://natick.s3.amazonaws.com/d37WBE5.png" alt="GGP" id="natick-ggp" /></a>
         </div>
