--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Natick Collection Shopper Search 2013</title>
+  <title>Natick Mall Couple Search 2013</title>
   <meta name="author" content="TalentSoup Chefs">
   <!-- CSS : implied media="all" -->
   <link rel="stylesheet" href="stylesheets/screen.css">
