--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Natick Collection Shopper Search 2013</title>
+  <title>Natick Mall Couple Search 2013</title>
   <meta name="author" content="TalentSoup Chefs">
   <!-- CSS : implied media="all" -->
   <link rel="stylesheet" href="stylesheets/screen.css">
@@ -36,13 +36,15 @@
         <br/>
         <h1>When are submissions accepted?</h1>
         <p class="natick-text">
-        We begin accepting entries at 8:00am ET Monday, April 26, 2013 and conclude at 12:00pm ET on Saturday, May 18, 2013.</p>
+        We begin accepting entries at 8:00am ET Monday, April 26, 2013 and conclude at 12:00pm ET on Saturday, June 30, 2013.</p>
         <br/>
         <h1>How does the Natick Mall Couple Search work?</h1>
 				<p class="natick-text">
 				Engaged couples in the Natick area are invited to submit photos on-line for an opportunity to be featured in our Favorite Couple Promotion.<br/>
-				All submissions will be reviewed, and selected Semi-finalists will be notified by Monday, May 20th to take part in a Call Back interview at Natick Mall on Saturday, May 25th. After the Call Back, two Finalists will be chosen to participate in public voting via social media to determine the final winner.  We expect to be able to announce the winning couple by June 1st.</p>
+				All submissions will be reviewed, and selected Semi-finalists will be notified by Friday, July 12th to take part in a Call Back interview at Natick Mall on Saturday, July 20th. After the Call Back, two Finalists will be chosen to participate in public voting via social media to determine the final winner.  We expect to be able to announce the winning couple by June 1st.</p>
+        <p class="natick-text">Based on number of entries and Semi-Finalist selections, Finalists may be chosen to participate in public voting via social media to determine the final winner. We expect to be able to announce the winning couple by August 9th.</p>
         <br/>
+
 				<h1>How do I enter?</h1>
         <p class="natick-text">
 				Please go to www.NatickShopperSearch.com and follow the instructions to enter. You will be directed to submit your photo(s) and tell us about yourself and your fiancé.</p>
@@ -55,7 +57,7 @@
         <br/>
         <h1>What will the new Faces of Natick Mall receive?</h1>
 				<p class="natick-text">
-				The winning couple will be the guests of honor at an Engagement Party held at Natick Mall (“Event”) on June 23, 2013 and at the Event they will receive multiple prizes from various Natick Mall tenants and other local merchants.  The winning couple will also be featured in Natick Mall media campaigns after they participate in a professional photo shoot. See our Contest Rules for complete prize details and terms.</p>  
+				The winning couple will be the guests of honor at an Engagement Party held at Natick Mall ("Event") on August 25, 2013 and at the Event they will receive multiple prizes from various Natick Mall tenants and other local merchants.  The winning couple will also be featured in Natick Mall media campaigns after they participate in a professional photo shoot. See our Contest Rules for complete prize details and terms.</p>  
         <br/>
         <h1>Where can I obtain the Contest Rules regarding the Natick Mall Couple Search?</h1>
         <p class="natick-text">
